update : function validate()

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 type="submit"
                 class="button"
                 value="C'est parti"
-                id="btn-submit" 
+                id="btn-submit"
               /> <!-- bouton pour soumettre son formulaire -->
                 <!-- ce dernier doit envoyer sur le message de confirmation qui se trouve ci-dessous -->
             </form>
@@ -289,7 +289,7 @@
 
           <!-- partie message de confirmation - doit apparaitre 
           après l'envoi des infos -->
-          <div id="confirm-modal">
+          <div id="confirm-modal" class="content">
             <div class="modal-body">
               <span class="confirm-modal-btn closed"></span>
               <p id="confirm-msg">
