--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <img alt="logo" src="img/Logo.png"/>
       </div>
 
+      <a href="#" class="icon">
+        <i class="fa fa-bars"></i>
+      </a>
+
       <div class="main-navbar">
         <a href="#" class="active"><span>Accueil</span></a>
         <a href="#"><span>Détails de l'évènement</span></a>
@@ -34,9 +38,6 @@
 
         <!-- la balise <a> ci-dessous permet de changer la navbar
           de la partie desktop en menu "hamburger" pour la partie mobile -->
-        <a href="#" class="icon">
-          <i class="fa fa-bars"></i>
-        </a>
       </div>
     </div>
 
@@ -81,7 +82,7 @@
               action="index.html"
               method="get">
 
-              <div class="formData">
+              <div class="formData" id="formDataFirstName">
                 <label>Prénom</label><br> <!-- ne doit contenir que des lettres -->
                 <input
                   class="text-control"
